# master-code-release

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  grid_search_evaluation.sh  grid_search_exp.sh  new
_matlab/: KF_whole.m  rose.m  sts_NFOV_UNBINNED_720P_30fps.mat  untitled.m
cpp/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compile_flags.txt
cpp/include/filter/: ConstrainedSkeletonFilter.hpp  PointFilter3D.hpp
cpp/include/filter/adaptive/: AdaptiveBarShalomFilter1D.hpp  AdaptivePointFilter3D.hpp
cpp/plot/: compare_ground_truth.py  matlab_calc.py  point3d.py
cpp/src/: filter.cpp
cpp/src/filter/: CMakeLists.txt  ConstrainedSkeletonFilter.cpp  ConstrainedSkeletonFilter.hpp  GenericFilter1D.hpp  Point.hpp  PointFilter3D.hpp  SkeletonFilter.hpp  Utils.cpp  Utils.hpp  com.hpp
cpp/src/filter/adaptive/: AdaptiveBarShalomFilter1D.hpp  AdaptiveConstrainedSkeletonFilter.hpp  AdaptivePointFilter3D.hpp  AdaptiveRoseFilter1D.hpp  AdaptiveZarchanFilter1D.hpp
cpp/tests/: CMakeLists.txt  constrained_skeleton_filter_test.cpp  hello_test.cpp
data/: filtered.npy  noisy_steps.npy  steps.npy  timestamps.npy
include/filter/: AbstractSkeletonFilter.hpp  Configuration.hpp  ConstrainedSkeletonFilter.hpp  GenericFilter1D.hpp  Point.hpp  PointFilter3D.hpp  SimpleConstrainedSkeletonFilter.hpp  SimpleGenericFilter1D.hpp  SimplePointFilter3D.hpp  SimpleSkeletonFilter.hpp  SkeletonFilter.hpp  SkeletonSaver.hpp  Utils.hpp  com.hpp
include/filter/adaptive/: AdaptiveBarShalomFilter1D.hpp  AdaptiveConstrainedSkeletonFilter.hpp  AdaptiveRoseFilter1D.hpp  AdaptiveZarchanFilter1D.hpp
matlab/: KF_whole.m  bodypose.m  extract_json.asv  extract_json.m  getMMaps.m  getMeasNoise.m  rose.asv  sts_NFOV_UNBINNED_720P_30fps.mat.bup
plot/: animate.py  calc.py  do.py  eval_benchmark.py  experiment_evaluate.py  matlab_calc.py  notes  plot_floor.py  simulation_evaluate.py
simulations/E2/: E2_human_sts.py  E2_human_sts_forward.py  E2_robotic_manipulator_2d_forinv.py
simulations/E2/models/meshes_human_sts/: knubbi_head.stl  knubbi_lowerleg_L.stl  knubbi_lowertrunk.stl  knubbi_upperarm.stl  knubbi_upperleg_L.mtl
simulations/E3/: E2_human_sts_forward.py  E2_robotic_manipulator_2d_forinv.py  E2_robotic_manipulator_2d_traj.py  noisy_steps.npy  steps.npy
simulations/E3/models/: human_sts_arms.bioMod  human_sts_arms_nohead.bioMod  robotic_manipulator_2d.bioMod
simulations/E3/models/meshes_human_sts/: knubbi_lowerleg_R.stl  knubbi_middletrunk.stl  knubbi_upperleg_L.stl  knubbi_upperleg_R.stl  knubbi_uppertrunk.stl  unit_cylinder_medres_leftforearmhand.stl
src/: filter.cpp  loadnpy.cpp  read_tsv.cpp  track_constant_vel.cpp
src/filter/: PointFilter3D.cpp  SimplePointFilter3D.cpp  Utils.cpp  com.cpp
tests/: CMakeLists.txt  constrained_skeleton_filter_test.cpp  hello_test.cpp  saver_test.cpp
